# knative-webhook-generic-json

./: .releaserc  app.py  deploy.yaml  pyproject.toml
.github/workflows/: main.yml
